# daylio-analysis

./: .gitignore  README.md  convex_learning.ipynb  dataset.py  entry.py  generate_report.py  learning.ipynb  learning2.ipynb  main.ipynb  main.py  plotting.py  pyproject.toml  requirements.txt  tag.py  utils.py
numerical analysis (py)/: Inverted_pendulum_RK_anim.ipynb  Inverted_pendulum_RK_anim.py  poisson equation (5 diag matrix).ipynb  task1_Rangle_PDE_2.ipynb  task1_angle_PDE.ipynb  task2_PDE.ipynb  task2_PDE_1.py  task2_PDE_2.py  task3_PDE.ipynb  task3_PDE.py
physics/physmech_1zad_1.12/: Ionization(problem 1.12).ipynb
physics/physmech_1zad_1.7/: Lennard-Jones potential and the corresponding B(T) .ipynb
physics/physmech_2zad_2.12/: S(T).txt  sigma(x).txt  zad2_12.ipynb
physics/physmech_2zad_2.12/physmech_2_pr/: alpha_Ar.txt  alpha_k.txt  physmech_2_pr.cpp  physmech_2_pr.sln  physmech_2_pr.vcxproj  physmech_2_pr.vcxproj.filters  sigma(T) 1.000000.txt  sigma(T).txt  sigma(x).txt  Лист Microsoft Excel.xlsx
physics/physmech_2zad_2.12/physmech_2_pr/Debug/: physmech_2_pr.exe.recipe  physmech_2_pr.ilk  physmech_2_pr.vcxproj.FileListAbsolute.txt  vc142.idb
physics/physmech_3zad_3.13/: physmech_3.13.ipynb
src/: books_timeline.py  clippings.py  dataset.py  entry.py  entry_condition.py  lang_utils.py  mock_data.py  monthly_report.py  plotting.py  tag.py  update_books.py  utils.py
src/analytics/: __init__.py  anomalies.py  correlations.py  frame.py  monthly.py  report.py  schemas.py  trends.py
(+7 files in other folders)
